[tool.poetry]
name = "whyamibroke"
version = "0.1.0"
description = ""
authors = ["Rich Hughes <r.hughes.reading@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.0"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^8.0.1"
jupyter = "^1.0.0"
ipykernel = "^6.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
